mdmCeneveo/src/objects/Sales_Data__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sales_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Actual_Amount__c</fullName>
        <label>Actual Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Forecast_USD__c</fullName>
        <formula>if( 
Period_End_Date__c &lt; (today()-15), 
Actual_Amount__c , 
 Forecast_USD__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual/Forecast USD$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Forecast__c</fullName>
        <formula>if(
Period_End_Date__c &lt; (today()-15),
 Actual_Amount__c ,
 Forecast_Amount__c 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Actual/Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Actual_Units__c</fullName>
        <label>Actual Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <label>Billing Account Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Amount_USD__c</fullName>
        <formula>IF 
( 
Owner:User.Canadian_User__c = true, 

(if 
( Year__c =&apos;2014&apos;,(  Budget_Amount__c  /1.05), 


 Budget_Amount__c  )), 

Budget_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Budget Amount - USD$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Amount__c</fullName>
        <label>Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Budget_Units__c</fullName>
        <label>Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Reporting_Period__c</fullName>
        <defaultValue>8</defaultValue>
        <label>Current Reporting Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENV_1st_Pass_Budget_Amount__c</fullName>
        <label>ENV - 1st Pass Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_1st_Pass_Budget_Units__c</fullName>
        <label>ENV - 1st Pass Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ENV_Adjusted_Budget_Amount__c</fullName>
        <label>ENV - Adjusted Budget Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Baseline_Amount__c</fullName>
        <label>ENV - Baseline_Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Buyout_Resale_Actual_Sales__c</fullName>
        <label>ENV - Buyout/Resale Actual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Buyout_Resale_Actual_Units__c</fullName>
        <label>ENV - Buyout/Resale Actual Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Buyout_Resale_Budget_Sales__c</fullName>
        <label>ENV - Buyout/Resale Budget Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Buyout_Resale_Budget_Units__c</fullName>
        <label>ENV - Buyout/Resale Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_LME_Adjustment__c</fullName>
        <label>ENV - LME Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Manufactured_Actual_Sales__c</fullName>
        <label>ENV - Manufactured Actual Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Manufactured_Actual_Units__c</fullName>
        <label>ENV - Manufactured Actual Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Manufactured_Budget_Sales__c</fullName>
        <inlineHelpText>Envelope Only</inlineHelpText>
        <label>ENV - Manufactured Budget Sales</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Manufactured_Budget_Units__c</fullName>
        <label>ENV - Manufactured Budget Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>ENV_Veritiv_Adjustment__c</fullName>
        <label>ENV Veritiv Adjustment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fiscal_year__c</fullName>
        <label>Fiscal year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_2_Week_Prior__c</fullName>
        <label>Forecast 2 Week Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_3_Week_Prior__c</fullName>
        <label>Forecast 3 Week Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_4_Week_Prior__c</fullName>
        <label>Forecast 4 Week Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Amount__c</fullName>
        <label>Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_USD__c</fullName>
        <formula>IF
(
  Owner:User.Canadian_User__c  = true,

(if 
( Year__c =&apos;2011&apos;,( Forecast_Amount__c /1.00),

(if
( Year__c =&apos;2012&apos;,( Forecast_Amount__c /0.970),

(if
( Year__c =&apos;2013&apos;,( Forecast_Amount__c /0.980),

(if
( Year__c =&apos;2014&apos;,( Forecast_Amount__c /1.05),

(if
( Year__c =&apos;2015&apos;,( Forecast_Amount__c /1.10),

Forecast_Amount__c 

)))))))))),

Forecast_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Forecast Amount - USD$</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Units__c</fullName>
        <label>Forecast Units</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Forecast_Variance_From_2_Week_Prior__c</fullName>
        <label>Forecast Variance From 2 Week Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Variance_From_3_Week_Prior__c</fullName>
        <label>Forecast Variance From 3 Week Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Variance_From_4_Week_Prior__c</fullName>
        <label>Forecast Variance From 4 Week Prior</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Forecast_Variance_From_Previous_Week__c</fullName>
        <label>Forecast Variance From Previous Week</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GMDollars__c</fullName>
        <label>GM $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GM__c</fullName>
        <label>GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Historical_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field used to keep track of owner of sales data.</description>
        <inlineHelpText>This field indicates historical owner of data and not the current owner of account.</inlineHelpText>
        <label>Historical Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <label>Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <description>Record Owner Manager</description>
        <label>Mgr Group</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin_Sales_Dollars__c</fullName>
        <label>Margin Sales Dollars</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Month__c</fullName>
        <label>Month</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Period_End_Date_Chk__c</fullName>
        <formula>IF(
 Period_End_Date__c &lt; (today ()-15) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Period End Date Chk</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Period_End_Date__c</fullName>
        <label>Period End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Period__c</fullName>
        <label>Period</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Plant_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant Product</label>
        <referenceTo>Plant_Products__c</referenceTo>
        <relationshipName>Sales_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <formula>Plant_Product__r.Plant__r.Name</formula>
        <label>Plant</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Previous_Week_Forecast_Amount__c</fullName>
        <label>Previous Week Forecast Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <formula>TEXT(Plant_Product__r.Product__r.Family)</formula>
        <label>Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <formula>Plant_Product__r.Product__r.Name</formula>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Data_Key__c</fullName>
        <formula>Year__c + &apos;-&apos; + TEXT(Period__c) + &apos;-&apos; + TEXT(Period_End_Date__c) + &apos;-&apos; + Account__r.Name + &apos;-&apos; + Plant__c + &apos;-&apos; + Product_Family__c + &apos;-&apos; + Product__c + &apos;-&apos; +  Account__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Data Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <defaultValue>text(YEAR(today()))</defaultValue>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Sales Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Account__c</columns>
        <columns>Key__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Sales Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Data</pluralLabel>
    <recordTypes>
        <fullName>Forecast_Sales_Data</fullName>
        <active>true</active>
        <description>Used when creating forecasted Sales Data records from the Forecast VF page.</description>
        <label>Forecast Sales Data</label>
    </recordTypes>
    <recordTypes>
        <fullName>Sales_Data_Record</fullName>
        <active>true</active>
        <description>Used when creating normal Sales Data records.</description>
        <label>Sales Data Record</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Cannot_update_after_Actual_filled_in</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
NOT($Profile.Name = &quot;System Administrator&quot;),
      OR (
           ISCHANGED (  Year__c ),
           ISCHANGED (  Period__c ),
           ISCHANGED (  Forecast_Amount__c )
          ),
      AND (
           NOT (ISBLANK (  Actual_Amount__c )),
           Actual_Amount__c &lt;&gt; 0
          )
     )</errorConditionFormula>
        <errorMessage>The Year, Period of Forecast Amount for this Sales Data record cannot be modified after the Actual Amount field is populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Year_Must_Be_Numeric</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISNUMBER( Year__c ) )</errorConditionFormula>
        <errorDisplayField>Year__c</errorDisplayField>
        <errorMessage>Year must be numeric.</errorMessage>
    </validationRules>
</CustomObject>